# clgraph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_PLAN.md  LICENSE  Makefile  QUICKSTART.md  README.md  RELEASE.md  TODO.md  clgraph-simple-diagram.md  convert_to_notebooks.py  pyproject.toml  run_all_examples.py  run_all_notebooks.py
.github/workflows/: ci.yml  publish-pypi.yml  publish-to-pypi.yml
.reports/: codemap-diff.txt
codemaps/: architecture.md  backend.md  data.md  frontend.md
examples/: INSTALL_MCP.md  README.md  README_MCP.md  README_NLP_RAG.md  cdc_scd_pipeline.ipynb  claude_desktop_config.json  complex_aggregates_lineage.ipynb  complex_aggregates_lineage.py  enterprise_demo_with_ollama.ipynb  enterprise_demo_with_ollama.py  grouping_sets_lineage.ipynb  grouping_sets_lineage.py  jaffle_shop_elt_pipeline.ipynb  join_predicate_lineage.ipynb  json_function_lineage.ipynb  json_function_lineage.py  lateral_join_lineage.ipynb  lateral_join_lineage.py  llm_description_generation.ipynb  llm_description_generation.py  mcp_config_example.json  mcp_server.py  merge_lineage.ipynb  merge_lineage.py  metadata_and_export_example.ipynb  metadata_and_export_example.py  metadata_comments_example.ipynb  metadata_comments_example.py  nlp_vector_database_rag.py  phase4_execution_demo.py  pipeline_example.ipynb  pipeline_example.py  pipeline_execution_example.ipynb  pipeline_execution_example.py  pivot_example.ipynb  pivot_example.py  qualify_lineage.ipynb  qualify_lineage.py  recursive_cte_lineage.ipynb  recursive_cte_lineage.py  (+21 more)
examples/jaffle_shop/: dbt_project.yml  jaffle_shop_pipeline.ipynb
examples/sql_files/: 01_raw_orders.sql  02_raw_customers.sql  03_raw_products.sql  README.md  run_lineage.ipynb  run_lineage.py  run_metadata.ipynb  run_metadata.py  run_with_duckdb.ipynb  run_with_duckdb.py
scripts/: install-hooks.sh
tests/: markdown_examples.py  test_aggregate_parser.py  test_case_expressions.py  test_cdc_scd_pipeline.py  test_cli.py  test_column_extractor.py  test_dagster_integration.py  test_dbt_integration.py  test_dialect_coverage.py  test_export.py  test_join_predicate_columns.py  test_join_types.py  test_kestra_integration.py  test_lineage.py  test_lineage_tracer.py  test_mage_integration.py  test_mcp.py  test_merge_statements.py  test_metadata_column.py  test_metadata_integration.py  test_metadata_manager.py  test_metadata_parser.py  test_metadata_persistence.py  test_metadata_propagation.py  test_models.py  test_module_extraction.py  test_multi_query.py  test_node_factory.py  test_orchestration_delegation.py  test_path_validation.py  test_pipeline_diff.py  test_pipeline_execution.py  test_pipeline_factories.py  test_pipeline_factory_extracted.py  test_pipeline_lineage_builder.py  test_pipeline_split.py  test_pipeline_validator.py  test_pivot_parser.py  test_prefect_integration.py  test_prompt_sanitization.py  (+13 more)
(+62 files in other folders)
